--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-hook-form": "^7.53.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "start-server-and-test": "^2.0.8",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "zod": "^3.23.8"
@@ -22,7 +23,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run --browser chrome",
+    "cypress:test": "start-server-and-test start http://localhost:3000 cypress:run",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
